Correct spacing of score

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -142,6 +142,7 @@ $turoquise: #00bcd4;
 		.spb-team-score {
 			margin-right: 25px;
 			line-height: 60px;
+			text-align: right;
 		}
 	}
 
